Fix layout issue

--- a/src/components/Resizer.less
+++ b/src/components/Resizer.less
@@ -8,6 +8,7 @@
 	border-bottom: none;
 	cursor: w-resize;
 	background-color: #f8f8f8;
+	flex-shrink: 0;
 
 	&::before {
 		content: '';
@@ -41,6 +42,7 @@
 	border-right: none;
 	cursor: s-resize;
 	background-color: #f8f8f8;
+	flex-shrink: 0;
 
 	&::before {
 		content: '';
